--- a/package.json
+++ b/package.json
@@ -1,18 +1,7 @@
 {
-  "name": "hanhandespider",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "author": "nie",
-  "license": "",
-  "repository": {},
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "async": "~2.1.4",
+  "devDependencies": {
     "cheerio": "^0.22.0",
-    "superagent": "^3.4.1",
-    "superagent-charset": "^1.1.1"
+    "chromedriver": "^2.29.0",
+    "selenium-webdriver": "^3.4.0"
   }
 }
