--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "2",
     "koa-router": "next"
+  },
+  "dependencies": {
+    "kcors": "^1.3.2"
   }
 }
