--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "next"
   },
   "dependencies": {
-    "kcors": "^1.3.2"
+    "kcors": "^1.3.2",
+    "koa-convert": "^1.2.0"
   }
 }
